--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "scripts": {
     "design-w": "npx tailwindcss -i ./public/style/style.css -o ./public/style/output.css --watch",
     "design": "npx tailwindcss -i ./public/style/style.css -o ./public/style/output.css",
-    "dev:format": "npx prettier . --write"
+    "dev:format": "npx prettier . --write",
+    "linter": "eslint --ignore-path .eslintignore --ext .js ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
