--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": "./src",
     "noImplicitAny": true,
-    "outDir": "src/",
+    "outDir": "./dist/src/",
     "target": "es2016",
     "module": "ES6",
     "esModuleInterop": true,
